# python-scoutnet

./: README.md  pyproject.toml  scoutnet.py
scoutnet/: __init__.py  client.py  models.py
