# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "scoutnet"
version = "1.1.2"
readme = "README.md"
description = "Scoutnet API bindings for Python"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/jschlyter/python-scoutnet"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
known-first-party = [
    "scoutnet",
]
combine-as-imports = true
split-on-trailing-comma = false
