# PEP 518: https://www.python.org/dev/peps/pep-0518/

[project]
name = "scoutnet"
dynamic = ["version"]
readme = "README.md"
description = "Scoutnet API bindings for Python"
authors = [{name="Jakob Schlyter", email = "jakob@schlyter.se"}]
license = "BSD-2-Clause"
requires-python = ">=3.13,<4.0"
dependencies = [
    "phonenumbers>=9.0.10",
    "pydantic-extra-types>=2.10.5",
    "pydantic[email]>=2.11.7",
    "requests>=2.32.4",
]

[project.urls]
repository = "https://github.com/jschlyter/python-scoutnet"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
combine-as-imports = true
